--- a/phipseq/data analysis/tile_diversity.ipynb
+++ b/phipseq/data analysis/tile_diversity.ipynb
@@ -54,10 +54,10 @@
     "\n",
     "target_organism = \"mammarenavirus lassaense\"\n",
     "\n",
-    "Entrez.email = \"sophie.porak@ucsf.edu\" #required for ncbi access\n",
+    "Entrez.email = \"email.edu\" #required for ncbi access\n",
     "\n",
-    "fasta_file = '/Users/sophieporak/Library/CloudStorage/Box-Box/DeRisi/lassa fever project/data processing/mapping diversity to crystal structure/0.96_tiling_out_nt_tiles_cp_cleaned_no_linkers_only_accession_with_tile_number_052925.fasta'\n",
-    "base_output_dir = '/Users/sophieporak/Desktop/tile_diversity_060325'\n",
+    "fasta_file = '0.96_tiling_out_nt_tiles_cp_cleaned_no_linkers_only_accession_with_tile_number_052925.fasta'\n",
+    "base_output_dir = 'tile_diversity_060325'\n",
     "\n",
     "#ensure output dir exists\n",
     "os.makedirs(base_output_dir, exist_ok=True)\n",
