alocated samples from each group to plate in chunks as evenly as possible, previously randomized, and then randomized again with all the samples on one plate.

--- a/phipseq/sample_randomizer/platemappy_SOPO.ipynb
+++ b/phipseq/sample_randomizer/platemappy_SOPO.ipynb
@@ -131,13 +131,58 @@
     "            + 12 * len(self._blockrow)\n",
     "        )\n",
     "\n",
-    "        usable = max(0, 96 - x)\n",
+    "        usable = max(0, 96 - x) #forces result to be at least 1\n",
     "        total_samples = self._X.shape[0] * (self._dup if self._dup else 1)\n",
+    "        #the idea is to find out how many plates you need to hold all of your samples including the above considerations.\n",
     "        k = math.ceil(total_samples / usable) if usable else math.ceil(total_samples / 1) #math.ceil rounds number up to nearest integer. e.g. math.ceil(4.2) = 5. in this case ensures there are enough slots / wells.\n",
-    "        return max(1, k)\n",
+    "        return max(1, k) #forces result to be at least 1\n",
     "    \n",
+    "    # ------- Allocation Method -----\n",
+    "\n",
+    "    def allocate_samples_to_plate(self) -> dict: \n",
+    "        \"\"\"\n",
+    "        Distribute samples to plates while preserving per-group balance. \n",
+    "        Strategy: for each group, shuffle the samples and then split into k chunks(so number of plates) as even as possible. \n",
+    "        then mix these chunks across plates. \n",
+    "        \"\"\"\n",
+    "        #generates number from 0 up to self.k - 1 and shifts number to start at 1 instead at 0 (with i + 1). each key maps to an empty list. so if you have e.g. 3 plates, then \n",
+    "        #you would have 1, 2, 3 mapping to (for now) empty lists. Samples will then be appended to the corresponding list later. \n",
+    "        samples_to_plates = {i + 1: [] for i in range(self.k)}\n",
+    "\n",
+    "        #Built list of samples for each group (with duplication if requested)\n",
+    "        for group in self.cats:\n",
+    "            samples_g = self._X.index[self._X['self._group'] == group].tolist()\n",
+    "            if self._dup and self._dup > 1: \n",
+    "                #duplicate each sample self._dup times \n",
+    "                samples_g = [s for s in samples_g for _ in range(self._dup)] \n",
+    "            \n",
+    "            random.shuffle(samples_g)\n",
+    "            split = chunks(samples_g, self.k) #list of length k, where samples from each group get distributed across number of plates k as evenly as possible. \n",
+    "            for i in range(self.k):\n",
+    "                samples_to_plates[i + 1].extend(split[i]) #extend differs from append, as it takes an iterable such as another list and adds each element individually. flattens one level. needed as we start off with an empty list.  \n",
+    "\n",
+    "        #a final suffle per plate to intermix groups more   \n",
+    "        for i in range(self.k):\n",
+    "            random.shuffle(samples_to_plates[i + 1])\n",
+    "        \n",
+    "        return samples_to_plates\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a3a28e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
