in addition added round-robin assignment as an alternative sample allocation and randomization strategy

--- a/phipseq/sample_randomizer/platemappy_SOPO.ipynb
+++ b/phipseq/sample_randomizer/platemappy_SOPO.ipynb
@@ -139,7 +139,7 @@
     "    \n",
     "    # ------- Allocation Method -----\n",
     "\n",
-    "    def allocate_samples_to_plate(self) -> dict: \n",
+    "    def allocate_samples_to_plate(self) -> dict: #arrow indicates that this function is expected to return a dictionary\n",
     "        \"\"\"\n",
     "        Distribute samples to plates while preserving per-group balance. \n",
     "        Strategy: for each group, shuffle the samples and then split into k chunks(so number of plates) as even as possible. \n",
@@ -166,6 +166,36 @@
     "            random.shuffle(samples_to_plates[i + 1])\n",
     "        \n",
     "        return samples_to_plates\n",
+    "\n",
+    "    def allocate_samples_alt(self) -> dict: \n",
+    "        \"\"\"\n",
+    "        Alternative allocator: round-robin assignment across plates per group. \n",
+    "        \"\"\"\n",
+    "        samples_to_plates = {i + 1: [] for i in range(self.k)} #again, creating empty lists as values to each key (plate number)\n",
+    "\n",
+    "        #for each group, shuffle and then place items round-robin by plate\n",
+    "        for group in self.cats:\n",
+    "            samples_g = self._X.index[self._X[self._group] == group].tolist()\n",
+    "            if self._dup and self._dup > 1: \n",
+    "                samples_g = [s for s in samples_g for _ in range(self._dup)]\n",
+    "            random.shuffle(samples_g)\n",
+    "\n",
+    "            plate_idx = 0\n",
+    "            for s in samples_g:\n",
+    "                samples_to_plates[plate_idx + 1].append(s) # to each plate, append the randomly shuffled samples of each group. \n",
+    "                plate_idx = (plate_idx + 1) % self.k #moves it to next plate. % self.k wraps it around when you reach the last plate. Because 3 / 3 = 1 with remainder 0. for 2 / 3, 3 fits zero times but the remainder is 2. \n",
+    "\n",
+    "\n",
+    "        #Optional shuffle\n",
+    "        for i in range(self.k):\n",
+    "            random.shuffle(samples_to_plates[i+1])\n",
+    "        \n",
+    "        return samples_to_plates\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "        \n",
