added features to include HC entire rows or block out entire rows and columns with zeros

--- a/phipseq/sample_randomizer/platemappy_SOPO.ipynb
+++ b/phipseq/sample_randomizer/platemappy_SOPO.ipynb
@@ -192,6 +192,60 @@
     "        \n",
     "        return samples_to_plates\n",
     "\n",
+    "    def create_plates(self, samples_to_plates: dict) -> dict: \n",
+    "        \"\"\"\n",
+    "        Creates plate matrices (8 x 12) with sample IDs and controls. \n",
+    "        Returns dict: {plate_number: np.ndarray shape (8,12)}\n",
+    "        \"\"\"\n",
+    "        plates = {}\n",
+    "\n",
+    "        for i in range(1, self.k + 1):\n",
+    "            # Make a fresh list so we don't mutate the input dict\n",
+    "            samples = list(samples_to_plates[i])\n",
+    "\n",
+    "            #build controls fresh for each plate\n",
+    "            AG = ['AG'] * self._ag\n",
+    "            Canary = ['Canary'] * self._can\n",
+    "            mAb = ['mAb'] * self._mab\n",
+    "\n",
+    "            pool = samples + AG + Canary + mAb \n",
+    "            random.shuffle(pool)\n",
+    "\n",
+    "            #Add contiguous block of 'HC' if requested \n",
+    "            if self._block > 0: \n",
+    "                #choose an insert start index such that block fits into 96 slots / wells\n",
+    "                insert_loc = random.randint(0, max(0, 96 - self._block))\n",
+    "\n",
+    "                #make a list of 'HC' of length self._block\n",
+    "                block_vals = ['HC'] * self._block\n",
+    "\n",
+    "                #splice the block into pool at position insert_loc. Splicing inserts a sequence into a list at a particular index. doesn't overwrite anything but shifts existing elements to the right. \n",
+    "                #python interprets [insert_loc:insert_loc] as \"insert here\".\n",
+    "                pool[insert_loc:insert_loc] = block_vals\n",
+    "\n",
+    "            #Entire blocked rows filled with 0 \n",
+    "            for r in sorted(self._blockrow):\n",
+    "                insert_loc = r * 12\n",
+    "                pool[insert_loc:insert_loc] = [0] * 12\n",
+    "\n",
+    "            #Entire blocked columns filled with 0 \n",
+    "            for c in sorted(self._blockcol):\n",
+    "                for rr in range(7, -1, -1): #row index, going from bottom (7) to top (0). inserting higher indices first prevents shifting the lower ones. \n",
+    "                    insert_loc = rr * 12 + c #gives the correct flat index. so the location in 96 wp with one single index. \n",
+    "                    pool[insert_loc:insert_loc] = [0] #inserts a zero at exactly that location\n",
+    "\n",
+    "            #pad to 96 to ensure every pool is exactly 96 elements long. \n",
+    "            if len(pool) < 96:\n",
+    "                pool.extend([0] * (96 - len(pool))) # pad with zeros \n",
+    "            if len(pool) > 96: #chops off the extras from the end so you are back to exaactly 96\n",
+    "                pool = pool[:96]\n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
