--- a/phipseq/sample_randomizer/platemappy_SOPO.ipynb
+++ b/phipseq/sample_randomizer/platemappy_SOPO.ipynb
@@ -239,25 +239,137 @@
     "                pool.extend([0] * (96 - len(pool))) # pad with zeros \n",
     "            if len(pool) > 96: #chops off the extras from the end so you are back to exaactly 96\n",
     "                pool = pool[:96]\n",
-    "\n",
-    "            \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "        \n",
+    "    def save_plates(self, plates, base_path) -> None:\n",
+    "        \"\"\"\n",
+    "        Save plate CSVs: plate_1.csv, plate_2.csv etc\n",
+    "        \"\"\"\n",
     "\n",
+    "        for p in plates: \n",
+    "            X = plates[p]\n",
+    "            df = pd.DataFrame(\n",
+    "                data=X, \n",
+    "                columns=[str(i) for i in range (1, 13)],\n",
+    "                index = list(\"ABCDEFGH\")\n",
+    "            )\n",
+    "            df.to_csv(f\"{base_path}plate_{p}.csv\")\n",
+    "        return None\n",
     "\n",
+    "     # -------- Visualization --------\n",
     "\n",
+    "    def view_plate(self, plate, view_bin=False, key=True, key_dict=None, save=False, save_loc=None) -> None:\n",
+    "        \"\"\"\n",
+    "        Visualize a plate layout.\n",
     "\n",
-    "\n"
+    "        Parameters\n",
+    "        ----------\n",
+    "        plate : np.ndarray (8,12)\n",
+    "            Plate matrix returned by create_plates().\n",
+    "        view_bin : bool\n",
+    "            If True, draw the numeric-coded matrix; otherwise draw sample IDs / control labels in cells.\n",
+    "        key : bool\n",
+    "            Whether to include a legend. (Recommended True.)\n",
+    "        key_dict : dict or None\n",
+    "            Optional mapping from group label -> nice display label in legend.\n",
+    "        save : bool\n",
+    "            Save the figure.\n",
+    "        save_loc : str or None\n",
+    "            Path used when save=True.\n",
+    "        \"\"\"\n",
+    "        fig, ax = plt.subplots(figsize=(15, 10))\n",
+    "\n",
+    "        # Category  color index\n",
+    "        n_cats = len(self.cats)\n",
+    "        cat_to_idx = {cat: i for i, cat in enumerate(self.cats)}\n",
+    "\n",
+    "        # Sample ID  category index\n",
+    "        # (We convert to str to be safe with mixed index types)\n",
+    "        sample_to_cat_idx = {\n",
+    "            str(sid): cat_to_idx[str(self._X.loc[sid, self._group])]\n",
+    "            for sid in self._X.index\n",
+    "        }\n",
+    "\n",
+    "        # Controls get indices AFTER the categories\n",
+    "        CONTROL_LABELS = ['AG', 'Canary', 'mAb', 'controls', 'HC']\n",
+    "        control_to_idx = {lab: n_cats + i for i, lab in enumerate(CONTROL_LABELS)}\n",
+    "        MISSING_IDX = n_cats + len(CONTROL_LABELS)  # index for empty/blocked wells (0)\n",
+    "\n",
+    "        # Build a lookup that maps: sampleID/controls/0  -> integer index\n",
+    "        def lookup(val):\n",
+    "            if isinstance(val, (int, float)) and val == 0:\n",
+    "                return MISSING_IDX\n",
+    "            sval = str(val)\n",
+    "            if sval in sample_to_cat_idx:\n",
+    "                return sample_to_cat_idx[sval]\n",
+    "            if sval in control_to_idx:\n",
+    "                return control_to_idx[sval]\n",
+    "            return MISSING_IDX\n",
+    "\n",
+    "        bin_plate = np.vectorize(lookup)(plate)\n",
+    "\n",
+    "        # Colors: categories + controls + missing\n",
+    "        default_colors = [\n",
+    "            'lightcyan','green','blue','deepskyblue','dodgerblue','seagreen',\n",
+    "            'aquamarine','cornflowerblue','plum','orchid','lightgreen','lightsalmon'\n",
+    "        ]\n",
+    "        # ensure we have enough colors\n",
+    "        need = n_cats + len(CONTROL_LABELS) + 1\n",
+    "        if len(default_colors) < need:\n",
+    "            # extend with a repeating simple palette (not fancy, but robust)\n",
+    "            more = (default_colors * ((need // len(default_colors)) + 1))[:need - len(default_colors)]\n",
+    "            default_colors = default_colors + more\n",
+    "\n",
+    "        cmap_ = ListedColormap(default_colors[:need])\n",
+    "        # boundaries for each integer label (0..need-1)\n",
+    "        bounds = np.arange(-0.5, need + 0.5, 1)\n",
+    "        norm_ = BoundaryNorm(bounds, cmap_.N)\n",
+    "\n",
+    "        # Draw grid, labels\n",
+    "        for i in range(8):\n",
+    "            for j in range(12):\n",
+    "                text_val = bin_plate[i, j] if view_bin else plate[i, j]\n",
+    "                ax.text(j, i, text_val, va='center', ha='center', fontsize=9)\n",
+    "                ax.vlines(j + 0.5, ymin=-.5, ymax=8.5, color='black', linewidth=0.5)\n",
+    "                ax.hlines(i + 0.5, xmin=-.5, xmax=12.5, color='black', linewidth=0.5)\n",
+    "\n",
+    "        # Legend\n",
+    "        if key:\n",
+    "            handles_ = []\n",
+    "            # sample categories\n",
+    "            for k, cat in enumerate(self.cats):\n",
+    "                label_ = key_dict.get(cat, cat) if key_dict else cat\n",
+    "                handles_.append(\n",
+    "                    mlines.Line2D([], [], color=default_colors[k], marker='s',\n",
+    "                                  linestyle='None', markersize=10, label=label_)\n",
+    "                )\n",
+    "            # controls\n",
+    "            for i, lab in enumerate(CONTROL_LABELS):\n",
+    "                idx = n_cats + i\n",
+    "                handles_.append(\n",
+    "                    mlines.Line2D([], [], color=default_colors[idx], marker='s',\n",
+    "                                  linestyle='None', markersize=10, label=lab)\n",
+    "                )\n",
+    "            # missing/blocked wells\n",
+    "            handles_.append(\n",
+    "                mlines.Line2D([], [], color=default_colors[MISSING_IDX], marker='s',\n",
+    "                              linestyle='None', markersize=10, label='Empty/Blocked')\n",
+    "            )\n",
+    "\n",
+    "            plt.legend(handles=handles_, bbox_to_anchor=(1.05, 1),\n",
+    "                       loc='upper left', borderaxespad=0.)\n",
+    "\n",
+    "        ax.matshow(bin_plate, cmap=cmap_, norm=norm_)\n",
+    "\n",
+    "        ax.set_xticks(range(12))\n",
+    "        ax.xaxis.tick_top()\n",
+    "        ax.set_xticklabels([str(i) for i in range(1, 13)], fontsize='x-large')\n",
+    "\n",
+    "        ax.set_yticks(range(8))\n",
+    "        ax.set_yticklabels(list(\"ABCDEFGH\"), fontsize='x-large')\n",
+    "\n",
+    "        if save and save_loc:\n",
+    "            plt.savefig(save_loc, bbox_inches='tight')\n",
+    "            \n"
    ]
   },
   {
