fixed errors such as forgetting to reshape the samples after aliquoting to plates to fit the plate shape (12, 8) and then also visualizing the plates

--- a/phipseq/sample_randomizer/platemappy_SOPO.ipynb
+++ b/phipseq/sample_randomizer/platemappy_SOPO.ipynb
@@ -151,7 +151,7 @@
     "\n",
     "        #Built list of samples for each group (with duplication if requested)\n",
     "        for group in self.cats:\n",
-    "            samples_g = self._X.index[self._X['self._group'] == group].tolist()\n",
+    "            samples_g = self._X.index[self._X[self._group] == group].tolist()\n",
     "            if self._dup and self._dup > 1: \n",
     "                #duplicate each sample self._dup times \n",
     "                samples_g = [s for s in samples_g for _ in range(self._dup)] \n",
@@ -239,6 +239,11 @@
     "                pool.extend([0] * (96 - len(pool))) # pad with zeros \n",
     "            if len(pool) > 96: #chops off the extras from the end so you are back to exaactly 96\n",
     "                pool = pool[:96]\n",
+    "\n",
+    "            #store in pool\n",
+    "            plates[i] = np.reshape(pool, (8, 12))\n",
+    "\n",
+    "        return plates\n",
     "        \n",
     "    def save_plates(self, plates, base_path) -> None:\n",
     "        \"\"\"\n",
@@ -374,11 +379,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8a3a28e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Category\n",
+      "History of BWF       202\n",
+      "No history of BWF    195\n",
+      "Incident F1           28\n",
+      "control               24\n",
+      "Incident F2           23\n",
+      "Repeated               3\n",
+      "Name: count, dtype: Int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os, pandas as pd, numpy as np, random\n",
+    "\n",
+    "# (optional) reproducibility\n",
+    "random.seed(42); np.random.seed(42)\n",
+    "\n",
+    "# Load your CSV: must have columns ['sample_id','status'] (rename to match)\n",
+    "X = pd.read_csv(\"BWF_samples_for_platemappy_randomizer.csv\")     # <-- change path\n",
+    "X = X.rename(columns={'your_group_col': 'Category', 'your_id_col': 'Sample_ID'})  # if needed\n",
+    "X = X.astype({'Category': 'string'})\n",
+    "X = X.set_index('Sample_ID', drop=True)\n",
+    "\n",
+    "print(X['Category'].value_counts())     # quick sanity check\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d3013246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plates needed 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Instantiate the class\n",
+    "md = Metadata(\n",
+    "    X=X, \n",
+    "    group_col='Category',\n",
+    "    n_ag = 4, \n",
+    "    n_canary = 2, \n",
+    "    n_mAb = 2, \n",
+    "    duplicate_ = 2, \n",
+    "    block_ = 0, \n",
+    "    block_column_ = [],\n",
+    "    block_row_ = []\n",
+    ")\n",
+    "print(\"Plates needed\", md.k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5a908c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "object of type 'NoneType' has no len()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m plates \u001b[38;5;241m=\u001b[39m md\u001b[38;5;241m.\u001b[39mcreate_plates(alloc)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# 2) Sanity-check you really have a dict of arrays\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(plates), \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mplates\u001b[49m\u001b[43m)\u001b[49m)        \u001b[38;5;66;03m# should be <class 'dict'> and >0\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, arr \u001b[38;5;129;01min\u001b[39;00m plates\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(k, \u001b[38;5;28mgetattr\u001b[39m(arr, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mshape\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))  \u001b[38;5;66;03m# each should be (8, 12)\u001b[39;00m\n",
+      "\u001b[0;31mTypeError\u001b[0m: object of type 'NoneType' has no len()"
+     ]
+    }
+   ],
+   "source": [
+    "alloc = md.allocate_samples_to_plate()\n",
+    "\n",
+    "plates = md.create_plates(alloc)\n",
+    "\n",
+    "# 2) Sanity-check you really have a dict of arrays\n",
+    "print(type(plates), len(plates))        # should be <class 'dict'> and >0\n",
+    "for k, arr in plates.items():\n",
+    "    print(k, getattr(arr, 'shape', None))  # each should be (8, 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5811d1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m \n\u001b[1;32m      2\u001b[0m os\u001b[38;5;241m.\u001b[39mmakedirs(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m./plates_out/\u001b[39m\u001b[38;5;124m\"\u001b[39m, exist_ok\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m----> 3\u001b[0m \u001b[43mmd\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msave_plates\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplates\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbase_path\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m./plates_out/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# writes plate_1.csv, plate_2.csv, ...\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[1], line 229\u001b[0m, in \u001b[0;36mMetadata.save_plates\u001b[0;34m(self, plates, base_path)\u001b[0m\n\u001b[1;32m    224\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21msave_plates\u001b[39m(\u001b[38;5;28mself\u001b[39m, plates, base_path) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    225\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;124;03m    Save plate CSVs: plate_1.csv, plate_2.csv etc\u001b[39;00m\n\u001b[1;32m    227\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 229\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m p \u001b[38;5;129;01min\u001b[39;00m plates: \n\u001b[1;32m    230\u001b[0m         X \u001b[38;5;241m=\u001b[39m plates[p]\n\u001b[1;32m    231\u001b[0m         df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(\n\u001b[1;32m    232\u001b[0m             data\u001b[38;5;241m=\u001b[39mX, \n\u001b[1;32m    233\u001b[0m             columns\u001b[38;5;241m=\u001b[39m[\u001b[38;5;28mstr\u001b[39m(i) \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m13\u001b[39m)],\n\u001b[1;32m    234\u001b[0m             index \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mABCDEFGH\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    235\u001b[0m         )\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "os.makedirs(\"./plates_out/\", exist_ok=True)\n",
+    "md.save_plates(plates, base_path=\"./plates_out/\")  # writes plate_1.csv, plate_2.csv, ..."
+   ]
   }
  ],
  "metadata": {
@@ -388,7 +507,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.18"
   }
  },
