saving png in same folder

--- a/phipseq/sample_randomizer/platemappy_SOPO.ipynb
+++ b/phipseq/sample_randomizer/platemappy_SOPO.ipynb
@@ -647,14 +647,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f5811d1c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'outdir' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 13\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m#save PNGs in the same folder \u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m png \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28msorted\u001b[39m(plates):\n\u001b[1;32m      7\u001b[0m     md\u001b[38;5;241m.\u001b[39mview_plate(\n\u001b[1;32m      8\u001b[0m         plates[png],\n\u001b[1;32m      9\u001b[0m         view_bin\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m, \n\u001b[1;32m     10\u001b[0m         key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, \n\u001b[1;32m     11\u001b[0m         key_dict\u001b[38;5;241m=\u001b[39mkey_dict,\n\u001b[1;32m     12\u001b[0m         save\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, \n\u001b[0;32m---> 13\u001b[0m         save_loc\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43moutdir\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/plate_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mpng\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.png\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     14\u001b[0m     )\n\u001b[1;32m     15\u001b[0m     plt\u001b[38;5;241m.\u001b[39mclose()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'outdir' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import os \n",
-    "os.makedirs(\"./plates_out/\", exist_ok=True)\n",
-    "md.save_plates(plates, base_path=\"./plates_out/\")  # writes plate_1.csv, plate_2.csv, ..."
+    "outdir = \"./plates_out\"\n",
+    "os.makedirs(outdir, exist_ok=True)\n",
+    "md.save_plates(plates, base_path=\"./plates_out/\")  # writes plate_1.csv, plate_2.csv, ...\n",
+    "\n",
+    "#save PNGs in the same folder \n",
+    "for png in sorted(plates):\n",
+    "    md.view_plate(\n",
+    "        plates[png],\n",
+    "        view_bin=False, \n",
+    "        key=True, \n",
+    "        key_dict=key_dict,\n",
+    "        save=True, \n",
+    "        save_loc=f\"{outdir}/plate_{png}.png\"\n",
+    "    )\n",
+    "    plt.close()"
    ]
   },
   {
